--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ nav a:hover::before {
     align-items: center;
     gap: 25px;
 }
-.social .bx.bxl-youtube {font-size: 30px;}
+.social .bx.bxl-vk {font-size: 30px;}
 .social .bx.bxl-telegram {font-size: 25px;}
 .social .bx.bx-envelope {font-size: 30px;}
 .footer .copyright {font-family: 'Anonymous Pro', sans-serif;}
