--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ nav a:hover::before {
 }
 .blk-content img {
     width: 100%;
+    padding-bottom: 20px;
 }
 .blk-content a {font-family: 'Anonymous Pro', sans-serif;}
 .pagination {
