--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ nav a:hover::before {
     padding-bottom: 4%;
     font-family: 'Joystix', sans-serif;
 }
-.blk-content h2, .blk-content h2 span {
+.blk-content h2, .blk-content h2 > span {
     font-size: 22px;
     font-family: 'Joystix', sans-serif;
     margin: 20px 0 10px;
