--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 body {
     padding: 10px;
     width: max-content;
-    background: rebeccapurple;
+    background: #090a2d;
 }
 .item {
     display: flex;
